# aihero-crash-course

./: .gitignore  main.py  pyproject.toml
course/: my-ingest.py  my_chunking.py  my_ingestion.py
project/: ingest-repo.py
