[project]
name = "aihero-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.32.0",
    "minsearch>=0.0.7",
    "numpy>=2.3.3",
    "pydantic-ai>=1.0.15",
    "python-dotenv>=1.1.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
